# Agent-Fabric

./: Cargo.toml  README.md
box/: README.md  preempt-rt.md  snapcraft.md  ubuntu-core-26.md
contexts/: fabric.context.jsonld  fabric.shacl.ttl  fabric.skos.ttl  fabric.ttl
crates/fabric-reconcile/: Cargo.toml
crates/fabric-reconcile/src/: lib.rs
docs/: agent-at-the-edge-profile.md  corporate-governance-model.md  cortex-monitoring-profile.md  existing-literature-and-protocols.md  external-consensus-quorum-model.md  fabric-authority-protocol.md  fabric-federation-model.md  fabric-intent-protocol.md  fabric-kernel-architecture.md  fabric-lifecycle-model.md  fabric-protocol-messages.md  fabric-protocol.md  fabric-reconciliation-protocol.md  fabric-relationship-vocabulary.md  fabric-runtime-contract.md  fabric-sdk.md  fabric-specific-records.md  fabric-temporal-protocol.md  fabric-validator.md  founder-operating-model.md  gap-filler-agent.md  go-framework-first.md  graph-orchestrator-profile.md  kubernetes-healer-agent-profile.md  kubernetes-operator-profile.md  no-direct-fabric-alteration.md  organizational-autonomy-model.md  partnership-model.md  platform-as-agent.md  platform-as-service-delivery-model.md  rust-kernel-go-orchestration.md  ubuntu-core-26-profile.md  ubuntu-horizon-panel.md  ubuntu-landscape-panel.md  ubuntu-realtime-preempt-rt-profile.md
examples/: comms.af  comms.graph.json  namespaced.af  namespaced.graph.json  queries.bql  research.af  research.graph.json
horizon/: README.md
schema/: README.md  context.jsonld
schemas/: node.schema.json  (+8 more)
(+88 files in other folders)
