[workspace]
members = [
  "crates/fabric-core",
  "crates/fabric-message",
  "crates/fabric-validate",
  "crates/fabric-authority",
  "crates/fabric-reconcile",
  "crates/fabric-project",
  "crates/fabric-store-memory",
  "crates/fabric-kernel"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AGenNext/Agent-Fabric"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
