[package]
name = "fabric-reconcile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
fabric-core = { path = "../fabric-core" }
fabric-validate = { path = "../fabric-validate" }
fabric-authority = { path = "../fabric-authority" }
